{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PiecesActions",
            "id": "5c01e73e-ac67-4a37-82f4-38fbe856c152",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "822291b8-e163-488d-8e73-ff77fe3d7adf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDown",
                    "type": "Button",
                    "id": "35a97131-7cca-4806-9862-51f2ae62d42b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "00703d40-f51b-4714-a630-fa9e398cea07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f55392c1-b1ec-43ac-af9c-08298f740cd3",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bb33fd9-8dc6-4035-88fb-e4f26c74c2b0",
                    "path": "<Touchscreen>/touch0/tap",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7277eeb0-1a27-41c8-a6e5-19d6894b402d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89c80ba3-6a7d-4e86-a023-a0ee95ec7c99",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3b40ed49-894c-4b65-9297-7cb7df232133",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5c8fc23e-af19-4771-8c4e-1028cf18b934",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "67e85399-bf0f-468b-a362-9fc9cefaaf96",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bc0797df-0fa9-43f7-8f78-f89500fff937",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6bbf225a-4645-442b-9293-0a8df4fa643a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        }
    ]
}